# HighSS

./: .gitignore  LICENSE  LICENSES.md  README.md  RELEASE_NOTES.md  pyproject.toml  setup.sh
Fine-tuning/: ADD_TO_ROOT_README.md  UPLOAD_INSTRUCTIONS.md
Fine_tuning/: .gitignore  LICENSE  README.md
boltz/: README.md
boltz/src/boltz/: main.py
checkpoints/: README.md
docs/: METHOD.md  PARAMETERS.md
environment/: environment.yml
examples/: run_highss_single.sh  run_highss_target_msa.sh  topology_examples.yaml
highss/: __init__.py  cli.py  design_engine.py  input_utils.py
highss/configs/: default_protein_config.yaml
scripts/: check_disulfide_geometry.py
tests/: test_cli_paths.py
training/: .gitignore  PARAMETER_SOURCES.md  README.md  SECURITY.md  requirements.txt  train.py  validate_config.py
training/checkpoints/: README.md
training/configs/: highss_mon_ft.yaml
training/data/: README.md
training/outputs/: README.md
training/process/: rcsb.py
